Добавлены матрицы третьего уровня

--- a/inc/4-varanalyz.tex
+++ b/inc/4-varanalyz.tex
@@ -60,7 +60,7 @@
 \subsection{Вычисление вектора приоритетов для матрицы парных сравнений второго уровня}
 
 Из группы матриц попарных сравнений формируется набор локальных приоритетов, которые выражают относительное влияние множества элементов на элемент примыкающего сверху уровня.
-Сначала вычислим геометрическое среднее в каждой строке матрицы A по формуле \ref{geomean}:
+Сначала вычислим геометрическое среднее в каждой строке матрицы A по формуле (\ref{geomean}):
 \begin{equation}\label{geomean}
 b_i = \sqrt[n]{\prod_{k=1}^{n}a_{ik}}
 \end{equation}
@@ -79,7 +79,7 @@ $b_4 = \sqrt[4]{0,3333 \cdot 0,1429 \cdot 0,125 \cdot 1} = \sqrt[4]{0,006} = 0,2
 
 $B = 0,5411 + 1,6266 + 4,0906 + 0,2783 = 6,5355$
 
-Определим значения компонент вектора локальных приоритетов по формуле \ref{veccom}:
+Определим значения компонент вектора локальных приоритетов по формуле (\ref{veccom}):
 \begin{equation}\label{veccom}
 x_i = \frac{b_i}{B}, i = \overline{1,n}
 \end{equation}
@@ -95,7 +95,7 @@ $x_3 = \frac{b_3}{B} =\frac{4,0906}{6,5355} = 0,6259$
 $x_4 = \frac{b_4}{B} =\frac{0,2783}{6,5355} = 0,0426$
 
 Так как числа $b_i$ нормализуются делением каждого числа на сумму всех чисел, то должно выполняться условие 
-\ref{vecsum}:
+(\ref{vecsum}):
 \begin{equation}\label{vecsum}
 \sum_{i=1}^{n} x_i = 1, i = \overline{1,n}
 \end{equation}
@@ -108,7 +108,7 @@ $X = 0,0828 + 0,2489 + 0,6259 + 0,0426 = 1,0002$
 
 \subsection{Исследование на согласованность матрицы парных сравнений второго уровня}
 
-Оценим отношение согласованности для матрицы попарных сравнений второго уровня по формуле \ref{atcon}:
+Оценим отношение согласованности для матрицы попарных сравнений второго уровня по формуле (\ref{atcon}):
 \begin{equation}\label{atcon}
 y_i = \sum_{i=1}^{n} a_{ik}, k = 1,2,...,n
 \end{equation}
@@ -123,7 +123,7 @@ $y_3 = 0,1429 + 0,2 + 1 + 0,125 = 1,4679$
 
 $y_4 = 3 + 7 + 8 + 1 = 19$
 
-Вычислим наибольшее собственное значение матрицы сравнений согласно формуле \ref{maxm}:
+Вычислим наибольшее собственное значение матрицы сравнений согласно формуле (\ref{maxm}):
 \begin{equation}\label{maxm}
 \lambda_{max} = \sum_{i=1}^{n} x_i \cdot y_i
 \end{equation}
@@ -140,7 +140,7 @@ $\lambda_{max} = 0,0828 \cdot 13,3333 + 0,2489 \cdot 6,3429 + 0,6259 \cdot 1,467
 
 $\lambda_{max} = 4,4109 > n = 4$
 
-В качестве степени отклонения положительной обратно-симметричной матрицы A от согласованной матрицы принимается отношение:
+В качестве степени отклонения положительной обратно-симметричной матрицы A от согласованной матрицы принимается отношение (\ref{icon}):
 \begin{equation}\label{icon}
 \text{ИС} = \frac{\lambda_{max} - n}{n - 1}
 \end{equation}
@@ -160,7 +160,7 @@ $\text{ИС} = \frac{4,4109 - 4}{3} = 0,137$
   \end{tabular}
 \end{table}
 
-Если разделить индекс согласованности на число, соответствующее случайной согласованности матрицы того же порядка, получается отношение согласованности (\hyperlink{ots}{ОС}) \ref{acon}:
+Если разделить индекс согласованности на число, соответствующее случайной согласованности матрицы того же порядка, получается отношение согласованности (\hyperlink{ots}{ОС}), формула (\ref{acon}):
 \begin{equation}\label{acon}
 \text{ОС} = \frac{\text{ИС}}{\text{СС}} \cdot 100\%
 \end{equation}
@@ -193,83 +193,315 @@ $\text{ОС} = \frac{0,137}{0,9} \cdot 100\% = 15,2\%$
 \subsection{Построение матриц попарных сравнений третьего уровня}
 
 На третьем уровне МАИ для каждого критерия проводятся попарные сравнения альтернатив и реализуются этап синтеза локальных приоритетов $z_j$ (j --- номер альтернативы, $j = \overline{1,m}$ в нашем примере $m = 3$) в соответствии с
-формулами (4.1)...(4.8).
+формулами (\ref{geomean}) ... (\ref{acon}).
 Также проводится исследование матрицы на согласованность \cite{var-analyz}.
 
-\subsubsection{Критерий <<Отказоустойчивость>>}
+\subsubsection{Критерий <<Цена>>}
 
------------------------------------------------------------------------------------------
-
-В таблице 4.5 проведены попарные сравнения альтернатив по критерию А1 <<Доступность>>.
+В табл. \ref{cost} проведены попарные сравнения альтернатив по критерию A1 <<Цена>>.
 \begin{table}[H]
-  \caption{Матрица попарных сравнений для критерия <<Доступность>>}
+  \caption{Матрица попарных сравнений для критерия <<Цена>>}\label{cost}
   \begin{tabular}{|l|l|l|l|}
   \hline Альтернатива & M1 & M2 & M3 \\
-  \hline M1 & 1 & 1/5 & 1,5 \\
-  \hline M2 & 5 & 1 & 1 \\
-  \hline M3 & 5 & 1 & 1 \\
+  \hline M1 & 1 & 4 & 6 \\
+  \hline M2 & 1/4 & 1 & 3 \\
+  \hline M3 & 1/6 & 1/3 & 1 \\
   \hline
   \end{tabular}
 \end{table}
 
-Согласно формуле (4.1) вычислим сравнительную желательность альтернатив по первому критерию:
+Согласно формуле (\ref{geomean}) вычислим сравнительную желательность альтернатив по первому критерию:
 
-$b_1 = \sqrt[3]{1 \cdot 0,2 \cdot 0,2} = \sqrt[3]{0,4} = 0,7368$
+$b_1 = \sqrt[3]{1 \cdot 4 \cdot 6} = \sqrt[3]{24} = 2,8845$
 
-$b_2 = \sqrt[3]{5 \cdot 1 \cdot 1} = \sqrt[3]{5} = 1,7099$
+$b_2 = \sqrt[3]{0,25 \cdot 1 \cdot 3} = \sqrt[3]{0,75} = 0,9086$
 
-$b_3 = \sqrt[3]{5 \cdot 1 \cdot 1} = \sqrt[3]{5} = 1,7099$
+$b_3 = \sqrt[3]{0,1667 \cdot 0,3333 \cdot 1} = \sqrt[3]{0,0556} = 0,3817$
 
 Просуммируем полученные значения:
 
-$B = 0,7368+ 1,7099 + 1,7099 = 4,1566$
+$B = 2,8845 + 0,9086 + 0,3817 = 4,1748$
 
-Далее воспользуемся формулой (4.2), заменив идентификаторы $x_i$ на $z_j$:
+Далее воспользуемся формулой (\ref{veccom}), заменив идентификаторы $x_i$ на $z_j$:
 
-$z_1 = \frac{0,7368}{4,1566} = 0,1773$
+$z_1 = \frac{2,8845}{4,1748} = 0,6909$
 
-$z_2 = \frac{1,7099}{4,1566} = 0,4114$
+$z_2 = \frac{0,9086}{4,1748} = 0,2176$
 
-$z_3 = \frac{1,7099}{4,1566} = 0,4114$
+$z_3 = \frac{0,3817}{4,1748} = 0,0914$
 
-Проведем проверку по формуле (4.3):
+Проведем проверку по формуле (\ref{vecsum}):
 
-$\sum_{i=1}^{3} 0,1773 + 0,4114 + 0,4114 = 1,0001$
+$\sum_{i=1}^{3} 0,6909 + 0,2176 + 0,0914 = 0,9999$
 
-Необходимо оценить погрешность вычислений по формуле (4.4):
+Оценка погрешности вычисляется по формуле (\ref{fault}):
+\begin{equation}\label{fault}
+\delta_{x} = \frac{|1 - \sum_{i=1}^{n} z_i|}{1} \cdot 100\%, i = \overline{1,n}
+\end{equation}
 
-$\delta_{x} = \frac{|1 - 1,0001|}{1} \cdot 100\% = 0,01$
+Оценим погрешность вычислений:
 
-Оценим отношение согласованности для матрицы попарных сравнений второго уровня по формуле 4.5:
+$\delta_{x} = \frac{|1 - 0,9999|}{1} \cdot 100\% = 0,01$
 
-$y_1 = 1 + 5 + 5 = 11$
+Оценим отношение согласованности для матрицы попарных сравнений второго уровня по формуле (\ref{atcon}):
 
-$y_2 = 0,2 + 1 + 1 = 2,2$
+$y_1 = 1 + 0,25 + 0,1667 = 1,4167$
 
-$y_3 = 0,2 + 1 + 1 = 2,2$
+$y_2 = 4 + 1 + 0,3333 = 5,3333$
 
-Вычислим наибольшее собственное значение матрицы сравнений согласно (4.6):
+$y_3 = 6 + 3 + 1 = 10$
 
-$\lambda_{max} = 0,1773 \cdot 11 + 0,4114 \cdot  2,2 + 20,4114 \cdot 2,2 = 1,1503 + 0,9551 + 0,9551 = 3,0685$
+Вычислим наибольшее собственное значение матрицы сравнений согласно (\ref{maxm}):
+
+$\lambda_{max} = 0,6909 \cdot 1,4167 + 0,2176 \cdot 5,3333 + 0,0914 \cdot 10 = 0,9788 + 1,1605 + 0,914 = 3,0533$
 
 Вычислим индекс согласованности для данной матрицы:
 
-$\text{ИС} = \frac{3,0685 - 3}{2} = 0,0343$
+$\text{ИС} = \frac{3,0533 - 3}{2} = 0,0267$
 
 Далее найдем отношение согласованности:
 
-$\text{ОС} = \frac{0,0343}{0,58} \cdot 100\% = 5,90\%$
+$\text{ОС} = \frac{0,0267}{0,58} \cdot 100\% = 4,6\%$
 
-Полученное значение $\text{ОС} = 5,90\% < 10\%$.
+Полученное значение $\text{ОС} = 4,6\% < 20\%$.
 Считаем, что матрица парных сравнений третьего уровня по критерию А1 является согласованной.
 
 \subsubsection{Критерий <<Масштабируемость>>}
 
-\subsubsection{Критерий <<Цена>>}
+В табл. \ref{agil} проведены попарные сравнения альтернатив по критерию A2 <<Масштабируемость>>.
+\begin{table}[H]
+  \caption{Матрица попарных сравнений для критерия <<Масштабируемость>>}\label{agil}
+  \begin{tabular}{|l|l|l|l|}
+  \hline Альтернатива & M1 & M2 & M3 \\
+  \hline M1 & 1 & 3 & 1 \\
+  \hline M2 & 1/3 & 1 & 1/3 \\
+  \hline M3 & 1 & 3 & 1 \\
+  \hline
+  \end{tabular}
+\end{table}
+
+Согласно формуле (\ref{geomean}) вычислим сравнительную желательность альтернатив по первому критерию:
+
+$b_1 = \sqrt[3]{1 \cdot 3 \cdot 1} = \sqrt[3]{3} = 1,4422$
+
+$b_2 = \sqrt[3]{0,3333 \cdot 1 \cdot 0,3333} = \sqrt[3]{0,1111} = 0,4807$
+
+$b_3 = \sqrt[3]{1 \cdot 3 \cdot 1} = \sqrt[3]{3} = 1,4422$
+
+Просуммируем полученные значения:
+
+$B = 1,4422 + 0,4807 + 1,4422 = 3,3651$
+
+Далее воспользуемся формулой (\ref{veccom}), заменив идентификаторы $x_i$ на $z_j$:
+
+$z_1 = \frac{1,4422}{3,3651} = 0,4286$
+
+$z_2 = \frac{0,4807}{3,3651} = 0,1429$
+
+$z_3 = \frac{1,4422}{3,3651} = 0,4286$
+
+Проведем проверку по формуле (\ref{vecsum}):
+
+$\sum_{i=1}^{3} 0,4286 + 0,1429 + 0,4286 = 1,0001$
+
+Оценим погрешность вычислений:
+
+$\delta_{x} = \frac{|1 - 1,0001|}{1} \cdot 100\% = 0,01$
+
+Оценим отношение согласованности для матрицы попарных сравнений второго уровня по формуле (\ref{atcon}):
+
+$y_1 = 1 + 0,3333 + 1 = 2,3333$
+
+$y_2 = 3 + 1 + 3 = 7$
+
+$y_3 = 1 + 0,3333 + 1 = 2,3333$
+
+Вычислим наибольшее собственное значение матрицы сравнений согласно (\ref{maxm}):
+
+$\lambda_{max} = 0,4286 \cdot 2,3333 + 0,1429 \cdot 7 + 0,4286 \cdot 2,3333 = 1,0001 + 1,0003 + 1,0001 = 3,0005$
+
+Вычислим индекс согласованности для данной матрицы:
+
+$\text{ИС} = \frac{3,0005 - 3}{2} = 0,0003$
+
+Далее найдем отношение согласованности:
+
+$\text{ОС} = \frac{0,0003}{0,58} \cdot 100\% = 0,05\%$
+
+Полученное значение $\text{ОС} = 0,05\% < 20\%$.
+Считаем, что матрица парных сравнений третьего уровня по критерию А2 является согласованной.
+
+\subsubsection{Критерий <<Отказоустойчивость>>}
+
+В табл. \ref{fat} проведены попарные сравнения альтернатив по критерию A3 <<Отказоустойчивость>>.
+\begin{table}[H]
+  \caption{Матрица попарных сравнений для критерия <<Отказоустойчивость>>}\label{fat}
+  \begin{tabular}{|l|l|l|l|}
+  \hline Альтернатива & M1 & M2 & M3 \\
+  \hline M1 & 1 & 1/3 & 1/3 \\
+  \hline M2 & 3 & 1 & 1/3 \\
+  \hline M3 & 3 & 3 & 1 \\
+  \hline
+  \end{tabular}
+\end{table}
+
+Согласно формуле (\ref{geomean}) вычислим сравнительную желательность альтернатив по первому критерию:
+
+$b_1 = \sqrt[3]{1 \cdot 0,3333 \cdot 0,3333} = \sqrt[3]{0,1111} = 0,4807$
+
+$b_2 = \sqrt[3]{3 \cdot 1 \cdot 0,3333} = \sqrt[3]{0,9999} = 1$
+
+$b_3 = \sqrt[3]{3 \cdot 3 \cdot 1} = \sqrt[3]{9} = 2,0801$
+
+Просуммируем полученные значения:
+
+$B = 0,4807 + 1 + 2,0801 = 3,5608$
+
+Далее воспользуемся формулой (\ref{veccom}), заменив идентификаторы $x_i$ на $z_j$:
+
+$z_1 = \frac{0,4807}{3,5608} = 0,135$
+
+$z_2 = \frac{1}{3,5608} = 0,2808$
+
+$z_3 = \frac{2,0801}{3,5608} = 0,5842$
+
+Проведем проверку по формуле (\ref{vecsum}):
+
+$\sum_{i=1}^{3} 0,135 + 0,2808 + 0,5842 = 1$
+
+Оценим погрешность вычислений:
+
+$\delta_{x} = \frac{|1 - 1|}{1} \cdot 100\% = 0$
+
+Оценим отношение согласованности для матрицы попарных сравнений второго уровня по формуле (\ref{atcon}):
+
+$y_1 = 1 + 3 + 3 = 7$
+
+$y_2 = 0,3333 + 1 + 3 = 4,3333$
+
+$y_3 = 0,3333 + 0,3333 + 1 = 1,6666$
+
+Вычислим наибольшее собственное значение матрицы сравнений согласно (\ref{maxm}):
+
+$\lambda_{max} = 0,135 \cdot 7 + 0,2808 \cdot 4,3333 + 0,5842 \cdot 1,6666 = 0,945 + 1,2168 + 0,9736 = 3,1354$
+
+Вычислим индекс согласованности для данной матрицы:
+
+$\text{ИС} = \frac{3,1354 - 3}{2} = 0,0677$
+
+Далее найдем отношение согласованности:
+
+$\text{ОС} = \frac{0,0677}{0,58} \cdot 100\% = 11,67\%$
+
+Полученное значение $\text{ОС} = 11,67\% < 20\%$.
+Считаем, что матрица парных сравнений третьего уровня по критерию А3 является согласованной.
 
 \subsubsection{Критерий <<Интерфейсы управления>>}
 
+В табл. \ref{interf} проведены попарные сравнения альтернатив по критерию A4 <<Интерфейсы управления>>.
+\begin{table}[H]
+  \caption{Матрица попарных сравнений для критерия <<Интерфейсы управления>>}\label{interf}
+  \begin{tabular}{|l|l|l|l|}
+  \hline Альтернатива & M1 & M2 & M3 \\
+  \hline M1 & 1 & 1/3 & 1/3 \\
+  \hline M2 & 3 & 1 & 1/3 \\
+  \hline M3 & 3 & 3 & 1 \\
+  \hline
+  \end{tabular}
+\end{table}
+
+Согласно формуле (\ref{geomean}) вычислим сравнительную желательность альтернатив по первому критерию:
+
+$b_1 = \sqrt[3]{1 \cdot 0,3333 \cdot 0,3333} = \sqrt[3]{0,1111} = 0,4807$
+
+$b_2 = \sqrt[3]{3 \cdot 1 \cdot 0,3333} = \sqrt[3]{0,9999} = 1$
+
+$b_3 = \sqrt[3]{3 \cdot 3 \cdot 1} = \sqrt[3]{9} = 2,0801$
+
+Просуммируем полученные значения:
+
+$B = 0,4807 + 1 + 2,0801 = 3,5608$
+
+Далее воспользуемся формулой (\ref{veccom}), заменив идентификаторы $x_i$ на $z_j$:
+
+$z_1 = \frac{0,4807}{3,5608} = 0,135$
+
+$z_2 = \frac{1}{3,5608} = 0,2808$
+
+$z_3 = \frac{2,0801}{3,5608} = 0,5842$
+
+Проведем проверку по формуле (\ref{vecsum}):
+
+$\sum_{i=1}^{3} 0,135 + 0,2808 + 0,5842 = 1$
+
+Оценим погрешность вычислений:
+
+$\delta_{x} = \frac{|1 - 1|}{1} \cdot 100\% = 0$
+
+Оценим отношение согласованности для матрицы попарных сравнений второго уровня по формуле (\ref{atcon}):
+
+$y_1 = 1 + 3 + 3 = 7$
+
+$y_2 = 0,3333 + 1 + 3 = 4,3333$
+
+$y_3 = 0,3333 + 0,3333 + 1 = 1,6666$
+
+Вычислим наибольшее собственное значение матрицы сравнений согласно (\ref{maxm}):
+
+$\lambda_{max} = 0,135 \cdot 7 + 0,2808 \cdot 4,3333 + 0,5842 \cdot 1,6666 = 0,945 + 1,2168 + 0,9736 = 3,1354$
+
+Вычислим индекс согласованности для данной матрицы:
+
+$\text{ИС} = \frac{3,1354 - 3}{2} = 0,0677$
+
+Далее найдем отношение согласованности:
+
+$\text{ОС} = \frac{0,0677}{0,58} \cdot 100\% = 11,67\%$
+
+Полученное значение $\text{ОС} = 11,67\% < 20\%$.
+Считаем, что матрица парных сравнений третьего уровня по критерию А4 является согласованной.
+
 \subsection{Анализ результатов оценки альтернатив}
+
+По полученным значениям векторов локальных приоритетов сделаем выводы о важности альтернатив для каждого из критериев.
+
+Критерий <<Цена>>:
+\begin{enumerate}
+  \item альтернатива А (0,6909);
+  \item альтернатива Б (0,2176);
+  \item альтернатива В (0,0914).
+\end{enumerate}
+
+Альтернатива А имеет явное преимущество над альтернативой Б, которая в свою очередь имеет явное преимущество над альтернативой В.
+
+Критерий <<Масштабируемость>>:
+\begin{enumerate}
+  \item альтернатива А (0,4286);
+  \item альтернатива Б (0,1429);
+  \item альтернатива В (0,4286).
+\end{enumerate}
+
+Альтернативы А и В имеют равные преимущества над альтернативой Б.
+
+Критерий <<Отказоустойчивость>>:
+\begin{enumerate}
+  \item альтернатива А (0,135);
+  \item альтернатива Б (0,2808);
+  \item альтернатива В (0,5842).
+\end{enumerate}
+
+Альтернатива В имеет преимущество над альтернативой Б, которая в свою очередь имеет преимущество перед альтернативой А.
+
+Критерий <<Интерфейсы управления>>:
+\begin{enumerate}
+  \item альтернатива А (0,135);
+  \item альтернатива Б (0,2808);
+  \item альтернатива В (0,5842).
+\end{enumerate}
+
+Альтернатива В имеет преимущество над альтернативой Б, которая в свою очередь имеет преимущество перед альтернативой А.
+
+Из полученных данных, можно сделать вывод, что альтернативы имеют равное значение и отдать небольшое предпочтение можно альтернативам А и В по сравнению с альтернативой Б.
 
 \subsection{Синтез глобальных приоритетов альтернатив}
 
