Закончил раздел по вариантному анализу

--- a/inc/4-varanalyz.tex
+++ b/inc/4-varanalyz.tex
@@ -200,7 +200,7 @@ $\text{ОС} = \frac{0,137}{0,9} \cdot 100\% = 15,2\%$
 
 В табл. \ref{cost} проведены попарные сравнения альтернатив по критерию A1 <<Цена>>.
 \begin{table}[H]
-  \caption{Матрица попарных сравнений для критерия <<Цена>>}\label{cost}
+  \caption{Матрица попарных сравнений по критерию A1}\label{cost}
   \begin{tabular}{|l|l|l|l|}
   \hline Альтернатива & M1 & M2 & M3 \\
   \hline M1 & 1 & 4 & 6 \\
@@ -270,7 +270,7 @@ $\text{ОС} = \frac{0,0267}{0,58} \cdot 100\% = 4,6\%$
 
 В табл. \ref{agil} проведены попарные сравнения альтернатив по критерию A2 <<Масштабируемость>>.
 \begin{table}[H]
-  \caption{Матрица попарных сравнений для критерия <<Масштабируемость>>}\label{agil}
+  \caption{Матрица попарных сравнений по критерию A2}\label{agil}
   \begin{tabular}{|l|l|l|l|}
   \hline Альтернатива & M1 & M2 & M3 \\
   \hline M1 & 1 & 3 & 1 \\
@@ -335,7 +335,7 @@ $\text{ОС} = \frac{0,0003}{0,58} \cdot 100\% = 0,05\%$
 
 В табл. \ref{fat} проведены попарные сравнения альтернатив по критерию A3 <<Отказоустойчивость>>.
 \begin{table}[H]
-  \caption{Матрица попарных сравнений для критерия <<Отказоустойчивость>>}\label{fat}
+  \caption{Матрица попарных сравнений по критерию A3}\label{fat}
   \begin{tabular}{|l|l|l|l|}
   \hline Альтернатива & M1 & M2 & M3 \\
   \hline M1 & 1 & 1/3 & 1/3 \\
@@ -400,7 +400,7 @@ $\text{ОС} = \frac{0,0677}{0,58} \cdot 100\% = 11,67\%$
 
 В табл. \ref{interf} проведены попарные сравнения альтернатив по критерию A4 <<Интерфейсы управления>>.
 \begin{table}[H]
-  \caption{Матрица попарных сравнений для критерия <<Интерфейсы управления>>}\label{interf}
+  \caption{Матрица попарных сравнений по критерию A4}\label{interf}
   \begin{tabular}{|l|l|l|l|}
   \hline Альтернатива & M1 & M2 & M3 \\
   \hline M1 & 1 & 1/3 & 1/3 \\
@@ -467,36 +467,36 @@ $\text{ОС} = \frac{0,0677}{0,58} \cdot 100\% = 11,67\%$
 
 Критерий <<Цена>>:
 \begin{enumerate}
-  \item альтернатива А (0,6909);
-  \item альтернатива Б (0,2176);
-  \item альтернатива В (0,0914).
+  \item альтернатива А ($0,6909$);
+  \item альтернатива Б ($0,2176$);
+  \item альтернатива В ($0,0914$).
 \end{enumerate}
 
 Альтернатива А имеет явное преимущество над альтернативой Б, которая в свою очередь имеет явное преимущество над альтернативой В.
 
 Критерий <<Масштабируемость>>:
 \begin{enumerate}
-  \item альтернатива А (0,4286);
-  \item альтернатива Б (0,1429);
-  \item альтернатива В (0,4286).
+  \item альтернатива А ($0,4286$);
+  \item альтернатива Б ($0,1429$);
+  \item альтернатива В ($0,4286$).
 \end{enumerate}
 
 Альтернативы А и В имеют равные преимущества над альтернативой Б.
 
 Критерий <<Отказоустойчивость>>:
 \begin{enumerate}
-  \item альтернатива А (0,135);
-  \item альтернатива Б (0,2808);
-  \item альтернатива В (0,5842).
+  \item альтернатива А ($0,135$);
+  \item альтернатива Б ($0,2808$);
+  \item альтернатива В ($0,5842$).
 \end{enumerate}
 
 Альтернатива В имеет преимущество над альтернативой Б, которая в свою очередь имеет преимущество перед альтернативой А.
 
 Критерий <<Интерфейсы управления>>:
 \begin{enumerate}
-  \item альтернатива А (0,135);
-  \item альтернатива Б (0,2808);
-  \item альтернатива В (0,5842).
+  \item альтернатива А ($0,135$);
+  \item альтернатива Б ($0,2808$);
+  \item альтернатива В ($0,5842$).
 \end{enumerate}
 
 Альтернатива В имеет преимущество над альтернативой Б, которая в свою очередь имеет преимущество перед альтернативой А.
@@ -505,6 +505,135 @@ $\text{ОС} = \frac{0,0677}{0,58} \cdot 100\% = 11,67\%$
 
 \subsection{Синтез глобальных приоритетов альтернатив}
 
+Для выявления составных, или глобальных, приоритетов методов решения нелинейных уравнений, локальные приоритеты альтернатив располагаются по отношению к каждому критерию.
+Каждый столбец векторов альтернатив умножается на приоритет соответствующего критерия и результаты складываются вдоль каждой строки \cite{var-analyz}, формула (\ref{globpr}):
+\begin{equation}\label{globpr}
+V^{M_j} = \sum_{i = 1}^{n} x_i \cdot z_{i}^{M_j}
+\end{equation}
+
+В табл. \ref{globdata} для наглядности представлены исходные данные для расчета значения компонент вектора глобальных приоритетов, полученные на предыдущих этапах МАИ.
+\begin{table}[H]
+  \caption{Данные для расчета глобальных приоритетов}\label{globdata}
+  \begin{tabular}{|l|l|l|l|l|}
+  \hline  & $x_1 (0,0828)$ & $x_2 (0,2489)$ & $x_3 (0,6259)$ & $x_4 (0,0426)$ \\
+  \hline $z_{i}^{M_1}$ & $0,6909$ & $0,4286$ & $0,135$ & $0,135$ \\
+  \hline $z_{i}^{M_2}$ & $0,2176$ & $0,1429$ & $0,2808$ & $0,2808$ \\
+  \hline $z_{i}^{M_3}$ & $0,0914$ & $0,4286$ & $0,5842$ & $0,5842$ \\
+  \hline
+  \end{tabular}
+\end{table}
+
+Рассчитаем по формуле (\ref{globpr}):
+
+$V^{M_1} = 0,0828 \cdot 0,6909 + 0,2489 \cdot 0,4286 + 0,6259 \cdot 0,135 + 0,0426 \cdot 0,135 = 0,0572 + 0,1067 + 0,0845 + 0,0058 = 0,2542$
+
+$V^{M_2} = 0,0828 \cdot 0,2176 + 0,2489 \cdot 0,1429 + 0,6259 \cdot 0,2808 + 0,0426 \cdot 0,2808 = 0,018 + 0,0356 + 0,1758 + 0,012 = 0,2414$
+
+$V^{M_2} = 0,0828 \cdot 0,0914 + 0,2489 \cdot 0,4286 + 0,6259 \cdot 0,5842 + 0,0426 \cdot 0,5842 = 0,018 + 0,1067 + 0,3657 + 0,0249 = 0,5135$
+
+Для проверки вычислений воспользуемся формулой (\ref{globsum}):
+\begin{equation}\label{globsum}
+\sum_{i = 1}^{n} V^{M_j} = 1
+\end{equation}
+
+$\sum_{i = 1}^{3} V^{M_j} = 0,2542 + 0,2414 + 0,5135 = 1,0091$
+
+Рассчитаем погрешность вычислений:
+
+$\delta_{V} = \frac{1 - 1,0091}{3} \cdot 100\% = 0,3\%$
+
+Полученная погрешность не превышает допустимые $20\%$, следовательно, будем считать погрешность удовлетворительной.
+
+Чтобы оценить согласованность всей иерархии, необходимо воспользоваться формулой (\ref{osh}):
+\begin{equation}\label{osh}
+\text{ОС}_{\text{Иерархии}} = \frac{\sum_{i = 1}^{n} x_i \cdot \text{ИС}_i}{\text{СС}(m)} \cdot 100\%
+\end{equation}
+где $x_i$ --- значение i-ой компоненты вектора локальных приоритетов второго уровня.
+$\text{ИС}_i$ --- значение i-го индекса согласованности матриц попарных сравнений третьего уровня.
+$\text{СС}(m)$ --- значение случайной согласованности для $m = 3$ \cite{var-analyz}.
+
+Выполним расчет:
+
+$\text{ОС}_{\text{Иерархии}} = \frac{0,0828 \cdot 0,0267 + 0,2489 \cdot 0,0003 + 0,6259 \cdot 0,0677 + 0,0426 \cdot 0,0677}{0,58} \cdot 100\% = \frac{0,0022 + 0,0001 + 0,0423 + 0,0029}{0,58} \cdot 100\% = \frac{0,0475}{0,58} \cdot 100\% = 8,19\%$
+
+Полученное значение допустимо так как, не превышает $20\%$.
+
+Результаты вычислений по формуле (\ref{globpr}) можно рассматривать как значения функции полезности для каждой из альтернатив \cite{var-analyz}.
+Теперь можно оценивать альтернативы по убыванию значений функции полезности.
+
+На первом месте альтернатива В (VMware vSphere), которая <<выигрывает>> у альтернативы А (KVM):
+
+$(0,5135 - 0,2542) \cdot 100\% = 25,93\%$
+
+Альтернатива А <<выигрывает>> у альтернативы Б (Hyper-V):
+
+$(0,2542 - 0,2414) \cdot 100\% = 1,28\%$
+
+Далее вычислим вклады критериев в окончательные результаты.
+Для вычисления $q_{i}^{M_j}$ (<<вклада>> i-го критерия в значение функции полезности $V^{M_j}$) воспользуемся значениями промежуточных результатов в формуле (\ref{globpr}) и подставим их в формулу (\ref{contr}) \cite{var-analyz}:
+\begin{equation}\label{contr}
+q_{i}^{M_j} = \frac{x_i \cdot z_{i}^{M_j}}{V^{M_j}} \cdot 100\%, i = \overline{1, 4}, j = \overline{1, 4}
+\end{equation}
+
+Определим количественные оценки в процентном соотношении вклада каждого из критериев подробнее и сделаем выводы.
+
+Альтернатива А (KVM):
+
+$q_{1}^{M_1} = \frac{0,0572}{0,2542} \cdot 100\% = 22,5\%$
+
+$q_{2}^{M_1} = \frac{0,1067}{0,2542} \cdot 100\% = 44,97\%$
+
+$q_{3}^{M_1} = \frac{0,0845}{0,2542} \cdot 100\% = 33,24\%$
+
+$q_{4}^{M_1} = \frac{0,0058}{0,2542} \cdot 100\% = 2,28\%$
+
+Исходя из полученных результатов, делаем вывод, что критерий <<Масштабируемость>> внес наибольший вклад в результат данной альтернативы, так как имеет наивысший приоритет.
+Так же значительный вес внесли критерии <<Отказоустойчивость>> и <<Цена>>.
+Критерий <<Интерфейсы управления>> не оказал сильного влияния на результат.
+
+Альтернатива Б (Hyper-V):
+
+$q_{1}^{M_2} = \frac{0,018}{0,2414} \cdot 100\% = 7,45\%$
+
+$q_{2}^{M_2} = \frac{0,0356}{0,2414} \cdot 100\% = 14,75\%$
+
+$q_{3}^{M_2} = \frac{0,1758}{0,2414} \cdot 100\% = 72,83\%$
+
+$q_{4}^{M_2} = \frac{0,012}{0,2414} \cdot 100\% = 4,97\%$
+
+Критерий <<Отказоустойчивость>> внес наибольший вклад в результат данной альтернативы.
+Остальные критерий не оказали сильного влияния на результат.
+
+Альтернатива В (VMware vSphere):
+
+$q_{1}^{M_3} = \frac{0,018}{0,5135} \cdot 100\% = 3,51\%$
+
+$q_{2}^{M_3} = \frac{0,1067}{0,5135} \cdot 100\% = 20,78\%$
+
+$q_{3}^{M_3} = \frac{0,3657}{0,5135} \cdot 100\% = 71,22\%$
+
+$q_{4}^{M_3} = \frac{0,0249}{0,5135} \cdot 100\% = 4,85\%$
+
+Критерий <<Отказоустойчивость>> внес наибольший вклад в результат данной альтернативы.
+Критерий <<Масштабируемость>> оказал небольшое влияние на результат.
+Остальные критерий не оказали сильного влияния.
+
 \subsection{Анализ результатов}
+
+Представим все полученные результаты вкладов критериев в виде табл. \ref{critdata}.
+\begin{table}[H]
+  \caption{Вклады критериев}\label{critdata}
+  \begin{tabular}{|l|l|l|l|l|}
+  \hline  & A1 & A2 & A3 & A4 \\
+  \hline $q_{i}^{M_1}$ & $22,5\%$ & $44,97\%$ & $33,24\%$ & $2,28\%$ \\
+  \hline $q_{i}^{M_2}$ & $7,45\%$ & $14,75\%$ & $72,83\%$ & $4,97\%$ \\
+  \hline $q_{i}^{M_3}$ & $3,51\%$ & $20,78\%$ & $71,22\%$ & $4,85\%$ \\
+  \hline
+  \end{tabular}
+\end{table}
+
+В результате проведения вариантного анализа определили, что взяв во внимание значения функции полезности для каждой из альтернатив и вклады каждого критерия, наибольшее предпочтение в выборе следует отдать альтернативе В (VMware vSphere), которая <<выигрывает>> у других альтернатив на $25,93\%$ и $27,21\%$.
+
+Также стоит упомянуть, что при выборе гипервизора на практике, недостаточно руководствоваться лишь несколькими критериями, так как для каждого конкретного случая необходимо рассматривать довольно обширный список критериев.
 
 \clearpage
