Исправлены опечатки, добавлен шаблон раздела практических исследований

--- a/inc/1-pz.tex
+++ b/inc/1-pz.tex
@@ -31,13 +31,12 @@
   \item декомпозицию системы и описание связей между ее элементами.
 \end{itemize}
 
-Вариантный анализ произведен исходя выбранных критериев \cite{var-analyz}:
+Вариантный анализ произведен исходя из выбранных критериев \cite{var-analyz}:
 \begin{itemize}
-  \item раз;
-  \item два;
-  \item три;
-  \item ...;
-  \item последний критерий.
+  \item цена;
+  \item масштабируемость;
+  \item отказоустойчивость;
+  \item интерфейсы управления.
 \end{itemize}
 
 \clearpage
