--- a/inc/5-description.tex
+++ b/inc/5-description.tex
@@ -43,14 +43,14 @@
 Примером является Amazon Web Services, где в декабре 2008~г. использовался протокол HTTP вместо HTTPS, таким образом увеличивая риск изменения данных без ведома пользователя \cite{aws}.
 
 Отсутствие операций аудита сети облачного провайдера уменьшает доступ клиента к соответствующим журналам сети и данным.
-Этот фактор риска может привести к повторному использованию IP-адресов, которые находятся в кэше DNS и могут ввести в заблуждение пользователей.
+Этот фактор риска может привести к повторному использованию IP-адресов, которые находятся в кэше \hyperlink{dns}{DNS} и могут ввести в заблуждение пользователей.
 
 Еще одним из факторов риска является \hyperlink{bgp}{BGP}-перехват (префиксный перехват или перехват маршрута) является незаконным поглощением групп IP-адресов, повреждая интернет-таблицы маршрутизации.
 Из-за ошибки конфигурации, можно присвоить себе автономную систему (\hyperlink{as}{AS}) без разрешения владельца.
 Возможно и преднамеренное присвоение AS, но это случается гораздо реже.
 
 Перехват префикса не является чем-то новым, однако из-за более широкого использования облачных вычислений, доступность облачных ресурсов увеличивается, а значит увеличивается количество мишеней для атак.
-Атаки на систему доменных имен (\hyperlink{dns}{DNS}) также не являются чем-то новым, однако и она представляет угрозу в сети из-за увеличения количества внешних DNS-запросов.
+Атаки на систему доменных имен (DNS) также не являются чем-то новым, однако и она представляет угрозу в сети из-за увеличения количества внешних DNS-запросов.
 В дополнение к уязвимости в протоколе DNS и его реализации, кэш DNS может подвергаться атакам.
 DNS-север может принимать некорректную информацию таким образом, что имя сервера целевого домена перенаправляется на другой целевой домен.
 DDoS также активно используется в атаках на IaaS.
