--- a/main.tex
+++ b/main.tex
@@ -23,8 +23,9 @@
 \input{inc/2-literature} % Обзор литературных источников по тематике исследования
 \input{inc/3-sysanalyz} % Системный анализ
 \input{inc/4-varanalyz} % Вариантный анализ
-\input{inc/5-description} % ОПИСАНИЕ РАБОТЫ, ПОКА НЕ ЗНАЮ ЧТО ТУТ
-\input{inc/6-results} % Анализ полученных результатов
+\input{inc/5-description} % Безопасность облачных вычислений
+\input{inc/6-practice} % Практические исследования
+\input{inc/7-results} % Анализ полученных результатов
 \input{inc/0-conclusion} % Заключение
 \input{inc/0-glossary} % Перечень сокращений и условных обозначений
 \input{inc/0-bibliography} % Библиографический список
