--- a/preamble.tex
+++ b/preamble.tex
@@ -20,6 +20,7 @@
 %\setsansfont{Liberation Sans} % Тут я его не использую, но если пригодится
 \setmonofont{FreeMono} % Моноширинный шрифт для оформления кода
 
+% Формулы
 \usepackage{mathtools}
 \usepackage{unicode-math} % Не совместим с amsmath
 \setmathfont{XITS Math} % Шрифт для формул: https://github.com/khaledhosny/xits-math
@@ -29,7 +30,7 @@
 \usepackage{polyglossia}
 \setdefaultlanguage{russian}
 
-
+% Абзацы и списки
 \usepackage{enumerate} % Тонкая настройка списков
 \usepackage{indentfirst} % Красная строка после заголовка
 \usepackage{float} % Расширенное управление плавающими объектами
@@ -106,7 +107,7 @@
 \renewcommand{\cfttabfont}{Таблица }
 \addto\captionsrussian{\renewcommand\listtablename{Список табличного материала}}
 
-% Нумерация страниц справа сверху
+% Нумерация страниц посередине сверху
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhf{}
