Раздел практических исследований

--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -166,6 +166,76 @@
     Режим доступа: https://goo.gl/rjUiQn
     (Дата обращения: 10.02.2017)
 
+\bibitem{cvedetails}
+    CVE security vulnerability database. Security vulnerabilities, exploits, references and more
+    [Электронный ресурс] //
+    CVE Details. The ultimate security vulnerability datasource
+    Режим доступа: https://goo.gl/I3RtO2
+    (Дата обращения: 20.02.2017)
+
+\bibitem{dcow}
+    Dirty COW (CVE-2016-5195) is a privilege escalation vulnerability in the Linux Kernel
+    [Электронный ресурс] //
+    CVE-2016-5195 info website
+    Режим доступа: https://goo.gl/ziy3Nd
+    (Дата обращения: 20.02.2017)
+
+\bibitem{xsa182}
+    Bug 1355987 - (CVE-2016-6258, xsa182) CVE-2016-6258 xsa182 xen: x86: Privilege escalation in PV guests (XSA-182)
+    [Электронный ресурс] //
+    Red Hat Bugzilla
+    Режим доступа: https://goo.gl/dlqtnR
+    (Дата обращения: 20.02.2017)
+
+\bibitem{tcp}
+    CVE-2016-5696
+    [Электронный ресурс] //
+    Common Vulnerabilities and Exposures. The Standart for Information Security Vulnerability Names
+    Режим доступа: https://goo.gl/xYpFQQ
+    (Дата обращения: 21.02.2017)
+
+\bibitem{qemu}
+    CVE-2016-5696
+    [Электронный ресурс] //
+    Debian Security Bug Tracker
+    Режим доступа: https://goo.gl/BXkTiL
+    (Дата обращения: 21.02.2017)
+
+\bibitem{netraw}
+    CVE-2016-8655 - Red Hat Customer Portal
+    [Электронный ресурс] //
+    Red Hat Customer Portal
+    Режим доступа: https://goo.gl/QhVbmm
+    (Дата обращения: 21.02.2017)
+
+\bibitem{netf}
+    CVE-2016-4997
+    [Электронный ресурс] //
+    Common Vulnerabilities and Exposures. The Standart for Information Security Vulnerability Names
+    Режим доступа: https://goo.gl/dbtXny
+    (Дата обращения: 21.02.2017)
+
+\bibitem{cryptsetup}
+    CVE-2016-4484: Cryptsetup Initrd root Shell
+    [Электронный ресурс] //
+    Hector Marco Gisbert - Lecturer and Cyber Security Researcher website
+    Режим доступа: https://goo.gl/Jrfg6H
+    (Дата обращения: 22.02.2017)
+
+\bibitem{openssl}
+    CVE-2016-6309 : statem/statem.c in OpenSSL 1.1.0a does not consider memory-block movement after a realloc call
+    [Электронный ресурс] //
+    CVE Details. The ultimate security vulnerability datasource
+    Режим доступа: https://goo.gl/JvJPf8
+    (Дата обращения: 22.02.2017)
+
+\bibitem{ecryptfs}
+    CVE-2016-1583
+    [Электронный ресурс] //
+    Debian Security Bug Tracker
+    Режим доступа: https://goo.gl/PIdqGR
+    (Дата обращения: 22.02.2017)
+
 \end{thebibliography}
 \endgroup
 
