--- a/inc/0-glossary.tex
+++ b/inc/0-glossary.tex
@@ -118,4 +118,16 @@
 
 \hypertarget{scp}{SCP --- Secure Copy Program}
 
+\hypertarget{cve}{CVE --- Common Vulnerabilities and Exposures, словарь известных уязвимостей}
+
+\hypertarget{id}{ID --- IDentificator, идентификатор}
+
+\hypertarget{cvss}{CVSS --- Common Vulnerability Scoring System, система оценки уязвимостей}
+
+\hypertarget{cow}{COW --- Copy-on-write, копирование при записи}
+
+\hypertarget{arm}{ARM --- Advanced RISC Machine, усовершенствованная RISC-машина}
+
+\hypertarget{grub}{GRUB --- GRand Unified Bootloader, загрузчик операционной системы}
+
 \clearpage
