--- a/preamble.tex
+++ b/preamble.tex
@@ -10,7 +10,9 @@
     basicstyle=\small\ttfamily, % Размер и тип шрифта
     breaklines=true, % Перенос строк
     tabsize=2, % Размер табуляции
-    literate={--}{{-{}-}}2 % Корректно отображать двойной дефис
+    frame=single, % Рамка
+    literate={--}{{-{}-}}2, % Корректно отображать двойной дефис
+    literate={---}{{-{}-{}-}}3 % Корректно отображать тройной дефис
 }
 
 % Шрифты, xelatex
