--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,7 @@
 \input{inc/3-sysanalyz} % Системный анализ
 \input{inc/4-varanalyz} % Вариантный анализ
 \input{inc/5-description} % Безопасность облачных вычислений
-\input{inc/6-practice} % Практические исследования
+\input{inc/6-experiment} % Экспериментальные исследования
 \input{inc/7-results} % Анализ полученных результатов
 \input{inc/0-conclusion} % Заключение
 \input{inc/0-glossary} % Перечень сокращений и условных обозначений
