Добавлен подраздел эксплуатации Dirty COW

--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -236,6 +236,13 @@
     Режим доступа: https://goo.gl/PIdqGR
     (Дата обращения: 22.02.2017)
 
+\bibitem{dcowexp}
+    gbonacini/CVE-2016-5195: A CVE-2016-5195 exploit example.
+    [Электронный ресурс] //
+    GitHub
+    Режим доступа: https://goo.gl/9tFhHh
+    (Дата обращения: 24.02.2017)
+
 \end{thebibliography}
 \endgroup
 
