--- a/inc/3-sysanalyz.tex
+++ b/inc/3-sysanalyz.tex
@@ -69,7 +69,8 @@
 Если некоторая подсистема имеет связи только с внешней средой, то есть смысл реализовать ее в виде отдельной системы.
 Подсистема, не связанная ни с внешней средой, ни с другой подсистемой, является избыточной и должна быть удалена из системы.
 
-ТУТ БУДЕТ РАЗБИЕНИЕ НА ПОДСИСТЕМЫ, СКОРЕЕ ВСЕГО В РАМУСЕ ДЕЛАТЬ IDEF0-ДИАГРАММЫ
+ТУТ БУДЕТ РАЗБИЕНИЕ НА ПОДСИСТЕМЫ, ИЛИ ИХ ЛУЧШЕ НЕ ДЕЛАТЬ?
+ПОКА НЕ МОГУ ПОНЯТЬ В ЧЕМ ЭТО ДЕЛАТЬ, В РАМУСЕ ПОСТОЯННО ЧТО-ТО ОТВАЛИВАЕТСЯ, ЛИБО ОТ РУКИ СНОВА, ЛИБО UML МОЖЕТ
 %Подсистема взаимодействия с пользователем представлена на рис. \ref{user-subsys}.
 %\addimg{user-subsys}{1}{Внутренние и внешние связи подсистемы взаимодействия с пользователем}{user-subsys}
 
